--- a/app/src/main/res/layout/movies_item_row.xml
+++ b/app/src/main/res/layout/movies_item_row.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tv_movies_item_title"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
-    android:gravity="fill_vertical"
-    android:orientation="vertical"
-    android:paddingLeft="8dp"
-    android:text="Title"></TextView>
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/tv_movies_item_title"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:gravity="fill_vertical"
+        android:orientation="vertical"
+        android:paddingLeft="8dp"
+        android:text="Title" />
+
+    <TextView
+        android:id="@+id/tv_movies_item_characters"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Descriptions" />
+</LinearLayout>
